k8s/api-deployement.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: api-deployment
spec:
    replicas: 3
    selector:
        matchLabels:
            component: api
    template:
        metadata:
            labels:
                component: api
        spec:
            containers:
                - name: api
                  image: ign0ramus/multi-docker-container-test-app_api
                  ports:
                    - containerPort: 5000
