k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: frontend
spec:
    replicas: 3
    selector:
        matchLabels:
            component: web
    template:
        metadata:
            labels:
                component: web
        spec:
            containers:
                - name: frontend
                  image: ign0ramus/multi-docker-container-test-app_frontend
                  ports:
                    - containerPort: 3000
